drone/drone-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  labels:
    name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      name: drone-runner
  template:
    metadata:
      labels:
        name: drone-runner
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
