drone/drone-service.yml
apiVersion: v1
kind: Service
metadata:
  name: drone
spec:
  selector:
    app: drone
  ports:
  - port: 80
    targetPort: 80
