drone/drone-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
spec:
  rules:
  - host: drone
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: 80
